--- a/Example/VisualMatic/Base.lproj/Main.storyboard
+++ b/Example/VisualMatic/Base.lproj/Main.storyboard
@@ -21,26 +21,26 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="WIV-Ob-jx8">
-                                <rect key="frame" x="10" y="272.5" width="355" height="122"/>
+                                <rect key="frame" x="10" y="316.5" width="355" height="34"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hiX-5d-eeR">
-                                        <rect key="frame" x="130" y="0.0" width="95" height="34"/>
+                                        <rect key="frame" x="157" y="0.0" width="41" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                        <state key="normal" title="Scan object"/>
+                                        <state key="normal" title="Scan"/>
                                         <connections>
-                                            <action selector="btnRecogniseCustomObjectWithSender:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Tva-tf-6mj"/>
+                                            <action selector="btnScanWithSender:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="BxB-hX-tyO"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gDX-Bs-151">
-                                        <rect key="frame" x="140" y="44" width="75" height="34"/>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gDX-Bs-151">
+                                        <rect key="frame" x="140" y="0.0" width="75" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                         <state key="normal" title="Scan text"/>
                                         <connections>
                                             <action selector="btnRecogniseTextWithSender:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="6co-oJ-PTl"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mpU-Hj-Ehy">
-                                        <rect key="frame" x="121.5" y="88" width="112" height="34"/>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mpU-Hj-Ehy">
+                                        <rect key="frame" x="121.5" y="0.0" width="112" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                         <state key="normal" title="Scan Barcode"/>
                                         <connections>
