--- a/Example/VisualMatic/Base.lproj/Main.storyboard
+++ b/Example/VisualMatic/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="WIV-Ob-jx8">
-                                <rect key="frame" x="10" y="316.5" width="355" height="34"/>
+                                <rect key="frame" x="10" y="294.5" width="355" height="78"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hiX-5d-eeR">
                                         <rect key="frame" x="157" y="0.0" width="41" height="34"/>
@@ -31,8 +31,16 @@
                                             <action selector="btnScanWithSender:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="2xy-yq-aoJ"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jh5-sX-PQp">
+                                        <rect key="frame" x="120.5" y="44" width="114" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="Update Model"/>
+                                        <connections>
+                                            <action selector="btnUpdateModelWithSender:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="lIR-6x-Q1A"/>
+                                        </connections>
+                                    </button>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gDX-Bs-151">
-                                        <rect key="frame" x="140" y="0.0" width="75" height="0.0"/>
+                                        <rect key="frame" x="140" y="78" width="75" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                         <state key="normal" title="Scan text"/>
                                         <connections>
@@ -40,7 +48,7 @@
                                         </connections>
                                     </button>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mpU-Hj-Ehy">
-                                        <rect key="frame" x="121.5" y="0.0" width="112" height="0.0"/>
+                                        <rect key="frame" x="121.5" y="78" width="112" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                         <state key="normal" title="Scan Barcode"/>
                                         <connections>
@@ -81,6 +89,7 @@
                     <navigationItem key="navigationItem" title="VisualMatic" id="MV9-QP-Sj3"/>
                     <connections>
                         <outlet property="btnScanOutlet" destination="hiX-5d-eeR" id="BUs-52-TWL"/>
+                        <outlet property="btnUpdateModelOutlet" destination="jh5-sX-PQp" id="OpB-8y-5Vj"/>
                         <outlet property="lblProgressPercent" destination="OEo-Pd-DKE" id="5XT-J3-NEo"/>
                         <outlet property="progressView" destination="sCk-iR-4Ql" id="rZH-dU-WaE"/>
                     </connections>
