--- a/Example/VisualMatic/Base.lproj/Main.storyboard
+++ b/Example/VisualMatic/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="WIV-Ob-jx8">
-                                <rect key="frame" x="10" y="294.5" width="355" height="78"/>
+                                <rect key="frame" x="10" y="257.5" width="355" height="152"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hiX-5d-eeR">
                                         <rect key="frame" x="157" y="0.0" width="41" height="34"/>
@@ -39,23 +39,34 @@
                                             <action selector="btnUpdateModelWithSender:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="lIR-6x-Q1A"/>
                                         </connections>
                                     </button>
-                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gDX-Bs-151">
-                                        <rect key="frame" x="140" y="78" width="75" height="0.0"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                        <state key="normal" title="Scan text"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="qGJ-0m-pch">
+                                        <rect key="frame" x="0.0" y="88" width="355" height="24"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set Accuracy:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XNk-I0-AeZ">
+                                                <rect key="frame" x="0.0" y="0.0" width="172.5" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fPR-Q0-4MJ">
+                                                <rect key="frame" x="182.5" y="0.0" width="172.5" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="ZRb-he-5ga">
+                                        <rect key="frame" x="23.5" y="122" width="308" height="31"/>
                                         <connections>
-                                            <action selector="btnRecogniseTextWithSender:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="6co-oJ-PTl"/>
+                                            <action selector="sliderChangeEventWithSender:" destination="vXZ-lx-hvc" eventType="valueChanged" id="BaN-oI-93G"/>
                                         </connections>
-                                    </button>
-                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mpU-Hj-Ehy">
-                                        <rect key="frame" x="121.5" y="78" width="112" height="0.0"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                        <state key="normal" title="Scan Barcode"/>
-                                        <connections>
-                                            <action selector="btnScanBarcodeWithSender:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="L7d-mn-A6s"/>
-                                        </connections>
-                                    </button>
+                                    </slider>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="qGJ-0m-pch" secondAttribute="trailing" id="QcO-M0-Sq9"/>
+                                    <constraint firstItem="qGJ-0m-pch" firstAttribute="leading" secondItem="WIV-Ob-jx8" secondAttribute="leading" id="wgr-ZO-Sgm"/>
+                                </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="b76-eF-d6D">
                                 <rect key="frame" x="0.0" y="637.5" width="375" height="29.5"/>
@@ -83,6 +94,7 @@
                             <constraint firstItem="WIV-Ob-jx8" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="Lcl-hu-QBC"/>
                             <constraint firstAttribute="trailing" secondItem="b76-eF-d6D" secondAttribute="trailing" id="NlG-9j-Voa"/>
                             <constraint firstAttribute="trailing" secondItem="WIV-Ob-jx8" secondAttribute="trailing" constant="10" id="T6Q-3I-O4M"/>
+                            <constraint firstItem="ZRb-he-5ga" firstAttribute="width" secondItem="kh9-bI-dsS" secondAttribute="width" multiplier="0.810667" id="cDt-yr-tHE"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="b76-eF-d6D" secondAttribute="bottom" id="hIq-AV-F90"/>
                         </constraints>
                     </view>
@@ -90,6 +102,7 @@
                     <connections>
                         <outlet property="btnScanOutlet" destination="hiX-5d-eeR" id="BUs-52-TWL"/>
                         <outlet property="btnUpdateModelOutlet" destination="jh5-sX-PQp" id="OpB-8y-5Vj"/>
+                        <outlet property="lblAccuracyValue" destination="fPR-Q0-4MJ" id="Y93-hs-ozI"/>
                         <outlet property="lblProgressPercent" destination="OEo-Pd-DKE" id="5XT-J3-NEo"/>
                         <outlet property="progressView" destination="sCk-iR-4Ql" id="rZH-dU-WaE"/>
                     </connections>
